--- a/Exercises/01 Exercise Notebook 1.ipynb
+++ b/Exercises/01 Exercise Notebook 1.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "(70, 2)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,16 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fe39053d900>"
+       "<matplotlib.collections.PathCollection at 0x7ff470fdfc10>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
     "    \n",
     "    def fit(X, y, beta):\n",
     "        \"\"\"Returns R^2, the coefficient of determination, a measure of goodness of fit\"\"\"\n",
-    "         # Get SSE_0\n",
+    "        # Get SSE_0\n",
     "        res_0 = y - np.mean(y)*np.ones(x.shape[0])\n",
     "        sse_0 = res_0.T @ res_0\n",
     "        return 1-sse(X, y, beta)/sse_0\n",
@@ -148,20 +148,20 @@
     "    # Find matrix X\n",
     "    X = np.array(list(map(lambda xpt: [g(xpt) for g in funcs[:k+1]], x)))\n",
     "\n",
-    "    beta =  least_squares(X, y)\n",
+    "    beta = least_squares(X, y)\n",
     "\n",
     "    return beta, fit(X, y, beta), residual(X, y, beta), y_col(X, beta)\n",
     "\n",
     "def power(n):\n",
-    "        def pw(x):\n",
-    "            return x**n\n",
-    "        return pw\n",
+    "    def pw(x):\n",
+    "        return x**n\n",
+    "    return pw\n",
     "\n",
     "def polyreg(data_matrix, k):\n",
     "    funcs = [power(n) for n in range(k+1)]\n",
     "    return lin_reg(data_matrix, funcs, k)\n",
     "\n",
-    "def lin_sin_fit(data_matrix):\n",
+    "def lin_sin_reg(data_matrix):\n",
     "    funcs = [power(0), power(1), np.sin, np.cos]\n",
     "    return lin_reg(data_matrix, funcs, 3)"
    ]
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
     " \n",
     " < fill in your answer in this cell.>\n",
     " \n",
-    " *k = 4 has the lowest SSE and highest R^2, indicating it is the best fit for the data available.*"
+    " ##### **k = 4 has the lowest SSE and highest R^2, indicating it is the best fit for the data available.**"
    ]
   },
   {
@@ -336,11 +336,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "6bfba3d9cec53d1fa1d59f855399e26dded27ccf19705ae5a5112c9714ee83ae"
    }
   }
  },
